# yabaitech_tokyo_vol_7

./: .gitmodules  README.md  Satyristes  main.saty  yabai2021s.opam  yabai2021w.opam  yabaitech2021w.opam
.github/workflows/: build.yml
binary/: article.satyh  lib.satyh
censored/: article.satyh
gfn/: article.satyh
irnbru/: article.satyh
lib/: code.satyh  commands.satyh
maswag/: Makefile  article.org  article.satyh  article.template.satyh  local.satyh
mh/: article.satyh
nullpo_head/: article.satyh
wasabiz/: article.satyh
zeptometer/: article.satyh
