opam-version: "2.0"
name: "yabai2021W"
version: "0.0.1"
synopsis: "yabaitech.tokyo vol.7"
description: """
yabaitech.tokyo vol.7
"""
maintainer: "Yuito Murase <yuito@acupof.coffee>"
authors: [
    "Masaki Waga"
    "Masayoshi Hayashi"
    "Ryo Sasaki"
    "Ryuichi Kiryo"
    "Takashi Suwa"
    "Takaya Saeki"
    "Wataru Inariba"
    "Yuichi Nishiwaki"
    "Yuito Murase"
]
license: "MIT"
homepage: "https://github.com/yabaitechtokyo/yabai2021w"
bug-reports: "https://github.com/yabaitechtokyo/yabai2021w/issues"
dev-repo: "git+https://github.com/yabaitechtokyo/yabai2021w.git"
depends: [
  "satysfi" {= "0.0.6"}
  "satyrographos" {>= "0.0.2.7" & < "0.0.3"}
  "satysfi-base" {>= "1.2.1" & < "2.0.0"}
  "satysfi-class-yabaitech" {= "0.0.8"}
  "satysfi-easytable" {>= "1.1.1" & < "2.0.0"}
  "satysfi-ruby" {= "0.1.2"}
  "satysfi-latexcmds" {= "0.1.0"}
  "satysfi-azmath" {= "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "yabai2021W"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
